# leadpipe

./: .env.example  ANALIZA-KRYTYCZNA.md  CHANGELOG.md  DEPLOY-CHECKLIST.md  KAMPANIE-REDESIGN.md  PLAN-IMPLEMENTACJI.md  RAPORT-SPOJNOSCI.md  README.md  REGULY-FINAL.md  REGULY.md  ZADANIA-BATCHE.md  ZADANIA-LISTA.md  ZADANIA-TDD.md  docker-compose.yml  pyproject.toml
dashboard/: README.md  app.js  backend.py  index.html  style.css
dashboard/data/: sample-batch.json
data/: sample-batch.csv  sample-leads-for-test.json  sample-rules.yaml
deploy/: leadpipe-dashboard.service  leadpipe-scan.service  leadpipe-scan.timer  smoke-test.sh
docs/: AGENT_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  RULES.md
docs/archive/: ARCHITEKTURA.md  CODEX-T0-SPEC.md  RAPORT-KRYTYCZNY.md  REGULY-v2.md  SPECYFIKACJA-T0-T1-T2.md  ZADANIA-KRYTYKA.md
hermes/leadpipe/: SKILL.md
leadpipe/: __init__.py  cli.py  csv_schemas.py  db_schema.py  decision_trace.py  engine.py  models.py  ruleset.py
leadpipe/rules/: campaigns.yml  decision_gates.yml  evidence.yml  feedback.yml  suppression.yml  t2_eligibility.yml
leadpipe/t0/: __init__.py  dns.py  html.py  http.py  performance.py  runner.py  signals.py  ssl.py  tech.py  url.py
leadpipe/t0_5/: __init__.py  cache.py  enrich_nip.py  enrich_vat.py
leadpipe/t1/: __init__.py  _html.py  contact.py  cta.py  forms.py  industry.py  jsonld.py
tests/: test_cli.py  test_models.py  test_t0.py  test_t0_5.py  test_t1.py
